debhelper (13.6.1) unstable; urgency=medium

  * dh_installalternatives: Improve validation of alternative files to
    catch some "obvious" copy-waste mistakes.

 -- Niels Thykier <niels@thykier.net>  Mon, 20 Dec 2021 12:55:03 +0000

debhelper (13.6) unstable; urgency=medium

  [ Niels Thykier ]
  * dh_assistant: Avoid creating `debian/.debhelper` when the
    which-build-system sub command is invoked.  Thanks to
    Jelmer Vernooĳ for spotting that bug.
  * dh_assistant: Add new active-compat-level command, which
    outputs information about which compat level is declared
    and active.  It also tells how the compat level was
    declared.
  * Dh_Lib.pm: Add new function, get_non_binnmu_date_epoch,
    only needed for dh_strip_nondeterminism.
  * dh_installcron: Add support for `cron.yearly` packaging
    file.  Thanks to Martin-Éric Racine for the suggestion.
    (Closes: #1000363)
  * Dh_Lib.pm: Remove support for compat 5 and 6.
  * debhelper.pod,debhelper-obsolete-compat.pod: Update to
    reflect the new status for compat 5 and 6.

  [ Guillem Jover ]
  * dh: Add missing _ in execute_after example in POD.

  [ Sandro Tosi ]
  * dh_compress: Exclude .woff and .woff2 by default.

  [ Translations ]
  * Update Portuguese translation (Américo Monteiro)
    (Closes: #1000719)

 -- Niels Thykier <niels@thykier.net>  Mon, 20 Dec 2021 12:55:03 +0000

debhelper (13.5.2) unstable; urgency=medium

  [ Niels Thykier ]
  * dh_installsystemd: Revert change to deploy systemd files into
    usr/lib/systemd.  (Closes: #993316, #993759)
  * dh_installinit: Ditto.
  * dh_systemd_enable: Ditto.
  * dh_systemd_start: Ditto.
  * SequencerUtil.pm: Remove duplicate "-a" option to some commands.
    Thanks to Christoph Berg for reporting the issue.
    (Closes: #971761)
  * dh_installdeb: Revert the change to rewrite `rm_conffiles` into
    `remove-on-upgrade` due to it causing bugs in non-trivial cases.
    (Closes: #994919)

  [ Christoph Berg ]