@@ -1210,6 +1210,11 @@ binary packages being uploaded to the archive by mistake. With the new behaviour
 the B<single-binary> addon will detect the mismatch and warn the maintainer of what is
 about to happen.
 
+=item -
+
+The B<dh_installalternatives> tool will now be run after B<dh_link> rather than after
+B<dh_installinitramfs> in the default B<dh> sequence.
+
 =back
 
 =item v15
