@@ -2,6 +2,9 @@ debhelper (13.6.1) unstable; urgency=medium
 
   * dh_installalternatives: Improve validation of alternative files to
     catch some "obvious" copy-waste mistakes.
+  * dh: Invoke dh_installalternatives after dh_link in compat 14 or
+    later. Thanks to Colin Watson for the suggestion.
+    (Closes: #1002800)
 
  -- Niels Thykier <niels@thykier.net>  Mon, 20 Dec 2021 12:55:03 +0000
 
